# libdrs

./: CMakeLists.txt  README  build_init.sh  build_init_cross.sh  build_init_native.sh  calibrate.c  calibrate.h  commands.c  commands.h  dap_sdk.c  dap_sdk.h  data_operations.c  data_operations.h  drs.c  drs.h  drs_cal.c  drs_cal.h  drs_cal_amp.c  drs_cal_amp.h  drs_cal_pvt.h  drs_cal_time_global.c  drs_cal_time_global.h  drs_cal_time_local.c  drs_cal_time_local.h  drs_calibrate.c  drs_calibrate.h  drs_cli.c  drs_cli.h  drs_data.c  drs_data.h  drs_macs.h  drs_ops.c  drs_ops.h  drs_proto.c  drs_proto.h  drs_proto_cmd.c  drs_proto_cmd.h  mem_ops.c  mem_ops.h  minIni.c
config/: SKIF_0_11.cfg  SKIF_0_12.cfg  SKIF_0_22.cfg  SKIF_1_0.cfg
dap-sdk/: CMakeLists.txt  dap_sdk.c
dap-sdk/cmake/: OS_Detection.cmake  Toolchain_host_Linux_target_armhf.cmake
dap-sdk/modules/core/include/: dap_common.h  dap_config.h
dap-sdk/modules/core/src/: dap_config.c
dap-sdk/modules/io/: dap_context.c  dap_events_socket.c  dap_server.c  dap_timerfd.c  dap_worker.c
dap-sdk/modules/net/server/cli_server/: dap_cli_server.c
dap-sdk/modules/net/server/cli_server/include/: dap_cli_server.h
driver/: CMakeLists.txt  Kbuild  cyclone_v.c
driver/include/: cyclone_v.h
driver/userspace/: cyclone_v_lib.c  cyclone_v_lib.h
example/: CMakeLists.txt  main.c  version.mk
example/make/server/: server.c
examples/make/9ch_sinus/: 9ch_sinus  9ch_sinus.c
examples/make/cli/: cli.c
